Fix: article list text alignment

--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -134,6 +134,7 @@ ul.posts {
 ul.posts li {
   line-height: 1.5em;
   padding: 7px 0px;
+  text-align: left;
 }
 
 ul.posts li a {
